# jyggalag-node

./: README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/ingest/: Cargo.toml
pallets/ingest/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
