[package]
name = "jyggalag-node"
version = "0.1.0"
authors = ['Timothy Yalugin <https://github.com/timoth-y>']
description = "NFT Moderation Node"
edition = '2021'
license = 'GNU GPL v3.0'
publish = false
repository = 'https://github.com/timoth-y/jyggalag-node'
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

[[bin]]
name = "parachain-collator"
path = "src/main.rs"

[features]
runtime-benchmarks = ["moderation-runtime/runtime-benchmarks"]

[dependencies]
derive_more = "0.99.2"
log = "0.4.14"
codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.8"
serde = { version = "1.0.119", features = ["derive"] }
hex-literal = "0.3.1"

# RPC related Dependencies
jsonrpc-core = "18.0.0"

# Local Dependencies
moderation-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking = { version = "4.0.0-dev", path = "../../substrate/frame/benchmarking" }
frame-benchmarking-cli = { version = "4.0.0-dev", path = "../../substrate/utils/frame/benchmarking-cli" }

pallet-transaction-payment-rpc = { version = "4.0.0-dev", path = "../../substrate/frame/transaction-payment/rpc" }

substrate-frame-rpc-system = { version = "4.0.0-dev", path = "../../substrate/utils/frame/rpc/system" }
substrate-prometheus-endpoint = { version = "0.10.0-dev", path = "../../substrate/utils/prometheus" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-cli = { version = "0.10.0-dev", path = "../../substrate/client/cli", features = ["wasmtime"] }
sc-client-api = { version = "4.0.0-dev", path = "../../substrate/client/api" }
sc-consensus = { version = "0.10.0-dev", path = "../../substrate/client/consensus/common"}
sc-executor = { version = "0.10.0-dev", path = "../../substrate/client/executor", features = ["wasmtime"] }
sc-network = { version = "0.10.0-dev", path = "../../substrate/client/network" }
sc-keystore = { version = "4.0.0-dev", path = "../../substrate/client/keystore" }
sc-rpc = { version = "4.0.0-dev", path = "../../substrate/client/rpc" }
sc-rpc-api = { version = "0.10.0-dev", path = "../../substrate/client/rpc-api" }
sc-service = { version = "0.10.0-dev", path = "../../substrate/client/service", features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", path = "../../substrate/client/telemetry" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../../substrate/client/transaction-pool" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../../substrate/client/transaction-pool/api" }
sc-tracing = { version = "4.0.0-dev", path = "../../substrate/client/tracing" }

## Substrate Primitive Dependencies
sp-api = { version = "4.0.0-dev", path = "../../substrate/primitives/api" }
sp-block-builder = { version = "4.0.0-dev", path = "../../substrate/primitives/block-builder" }
sp-blockchain = { version = "4.0.0-dev", path = "../../substrate/primitives/blockchain" }
sp-consensus = { version = "0.10.0-dev", path = "../../substrate/primitives/consensus/common" }
sp-consensus-aura = { version = "0.10.0-dev", path = "../../substrate/primitives/consensus/aura" }
sp-core = { version = "4.0.0-dev", path = "../../substrate/primitives/core" }
sp-inherents = { version = "4.0.0-dev", path = "../../substrate/primitives/inherents" }
sp-keystore = { version = "0.10.0-dev", path = "../../substrate/primitives/keystore" }
sp-offchain = { version = "4.0.0-dev", path = "../../substrate/primitives/offchain" }
sp-runtime = { version = "4.0.0-dev", path = "../../substrate/primitives/runtime" }
sp-session = { version = "4.0.0-dev", path = "../../substrate/primitives/session" }
sp-timestamp = { version = "4.0.0-dev", path = "../../substrate/primitives/timestamp" }
sp-transaction-pool = { version = "4.0.0-dev", path = "../../substrate/primitives/transaction-pool" }

# Cumulus dependencies
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12' }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12' }
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12' }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12' }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12' }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12' }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
