[package]
name = "moderation-runtime"
version = "0.1.0"
description = 'NFT moderation runtime'
authors = ['Timothy Yalugin <https://github.com/timoth-y>']
edition = '2018'
license = 'GNU GPL v3.0'
publish = false
repository = 'https://github.com/timoth-y/jyggalag-node'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
log = { version = "0.4.14", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true, features = ["derive"] }
smallvec = "1.6.1"

# Local Dependencies
## Custom pallets
pallet-ingest = { version = "0.0.1", default-features = false, path = "../pallets/ingest" }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { version = "4.0.0-dev", path = "../../substrate/primitives/api" }
sp-block-builder = { version = "4.0.0-dev", path = "../../substrate/primitives/block-builder" }
sp-consensus-aura = { version = "0.10.0-dev", path = "../../substrate/primitives/consensus/aura" }
sp-core = { version = "4.0.0-dev", path = "../../substrate/primitives/core" }
sp-inherents = { version = "4.0.0-dev", path = "../../substrate/primitives/inherents" }
sp-io = { version = "4.0.0-dev", path = "../../substrate/primitives/io" }
sp-offchain = { version = "4.0.0-dev", path = "../../substrate/primitives/offchain" }
sp-runtime = { version = "4.0.0-dev", path = "../../substrate/primitives/runtime" }
sp-session = { version = "4.0.0-dev", path = "../../substrate/primitives/session" }
sp-std = { version = "4.0.0-dev", path = "../../substrate/primitives/std" }
sp-transaction-pool = { version = "4.0.0-dev", path = "../../substrate/primitives/transaction-pool" }
sp-version = { version = "4.0.0-dev", path = "../../substrate/primitives/version" }

## Substrate FRAME Dependencies
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, path = "../../substrate/frame/benchmarking" }
frame-executive = { version = "4.0.0-dev", default-features = false, optional = true, path = "../../substrate/frame/executive" }
frame-support = { version = "4.0.0-dev", default-features = false, optional = true, path = "../../substrate/frame/support" }
frame-system = { version = "4.0.0-dev", default-features = false, optional = true, path = "../../substrate/frame/system" }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, path = "../../substrate/frame/system/benchmarking" }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, optional = true, path = "../../substrate/frame/system/rpc/runtime-api" }

## Substrate Pallet Dependencies
pallet-aura = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/aura" }
pallet-authorship = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/authorship" }
pallet-balances = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/balances" }
pallet-session = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/session" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/sudo" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/timestamp" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/transaction-payment" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/transaction-payment/rpc/runtime-api" }

# Cumulus dependencies
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12', default-features = false }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12', default-features = false }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12', default-features = false }
cumulus-primitives-timestamp = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12', default-features = false }
pallet-collator-selection = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12', default-features = false }
parachain-info = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12', default-features = false }

# Polkadot Dependencies
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.12" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.12" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.12" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.12" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.12" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.12" }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"serde",
	"scale-info/std",
	"log/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-pallet-dmp-queue/std",
	"parachain-info/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"pallet-ingest/std",
]

runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
]
