[package]
name = 'pallet-ingest'
version = '0.0.1'
description = 'FRAME pallet template for defining custom runtime logic.'
authors = ['Timothy Yalugin <https://github.com/timoth-y>']
edition = '2018'
license = 'GNU GPL v3.0'
publish = false
repository = 'https://github.com/timoth-y/jyggalag-node'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.14"
serde = { version = "1.0.119" }
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"], default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

frame-support = { version = "4.0.0-dev", default-features = false, path = "../../../substrate/frame/support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../../substrate/frame/system" }

sp-std = { version = "4.0.0-dev", default-features = false, path = "../../../substrate/primitives/std" }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../../../substrate/primitives/core" }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../../substrate/primitives/runtime" }
sp-io = { version = "4.0.0-dev", default-features = false, path = "../../../substrate/primitives/io" }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
	'sp-std/std',
]
